# cloudfared-ssh

./: .env.template  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml  run.sh  wizard.sh
.github/workflows/: ci.yml
cloudfared_tunnel/: __init__.py  main.py
cloudfared_tunnel/controller/: syncer_controller.py  tunnel_controller.py
cloudfared_tunnel/model/: config.py  state.py  tunnel.py
cloudfared_tunnel/view/: cli_view.py  flask_view.py  polybar_view.py
docs/: tunnel-lifecycle.puml
logstash/pipeline/: cloudflared.conf
scripts/: cloudflared-tunnel.service  restore-tunnel.sh  setup-vm.sh  tunnel.service
src/: __init__.py  __main__.py
src/controller/: __init__.py  cli.py  tunnel.py
src/core/: config.py  state.py  system.py
src/scripts/: cloudflared-tunnel.service  restore-tunnel.sh  run-cloudflared-tunnel.sh  setup-vm.sh  setup.sh
src/view/: tui.py
tests/: test_all.py
