[tool.poetry]
name = "cloudfared-tunneling"
version = "1.0.0"
description = "Cloudflare Tunnel Manager — CLI, REST API, Polybar toggle & systemd auto-recovery"
authors = ["tuliofh01"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "cloudfared_tunnel" }]

[tool.poetry.urls]
Homepage = "https://github.com/tuliofh01/cloudfared-ssh"
Repository = "https://github.com/tuliofh01/cloudfared-ssh.git"
"Issues" = "https://github.com/tuliofh01/cloudfared-ssh/issues"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
psutil = "^5.9.8"
rich = "^13.7.0"
cryptography = "^42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
