[project]
name = "cloudfared-tunnel"
version = "2.0.0"
description = "Cloudflare Tunnel TUI dashboard + CLI manager — zero external dependencies"
authors = [{ name = "tuliofh01" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/tuliofh01/cloudfared-ssh"
Repository = "https://github.com/tuliofh01/cloudfared-ssh.git"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cloudfared_tunnel*"]
